--- a/front/alarm/src/assets/base.css
+++ b/front/alarm/src/assets/base.css
@@ -8,7 +8,7 @@
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
-  --vt-c-indigo: #2c3e50;
+  --vt-c-indigo: white;
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
@@ -18,7 +18,16 @@
   --vt-c-text-light-1: var(--vt-c-indigo);
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+  --vt-c-text-dark-2: white;
+
+  --bg-white: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="50" height="50"%3E%3Ctext x="-20" y="35" font-size="14" font-family="Roboto" fill="%23eeee" transform="rotate(-45)"%3ETimely%3C/text%3E%3C/svg%3E');
+  --bg-dark: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="50" height="50"%3E%3Ctext x="-20" y="35" font-size="14" font-family="Roboto" fill="%23222222" transform="rotate(-45)"%3ETimely%3C/text%3E%3C/svg%3E');
+
+  --bg-nav-color-white :rgb(250, 250, 250);
+  --bg-nav-color-dark :rgb(35, 34, 34);
+
+  --text-color :rgb(176, 0, 32);
+
 }
 
 /* semantic color variables for this project */
@@ -34,6 +43,10 @@
   --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
+
+  --bg-image: var(--bg-white);
+
+  --bg-color-nav: var(--bg-nav-color-white)
 }
 
 @media (prefers-color-scheme: dark) {
@@ -47,6 +60,10 @@
 
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
+
+    --bg-image: var(--bg-dark);
+
+    --bg-color-nav: var(--bg-nav-color-dark)
   }
 }
 
@@ -71,4 +88,6 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: var(--bg-image);
 }
